--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   <body>
     <h1>hola soc l'izan</h1>
     <h2>soc programador</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ab alias quae
+      deleniti assumenda neque, placeat culpa modi a, quas fugit in odio dolor
+      iure sit adipisci ullam doloribus mollitia.
+    </p>
   </body>
 </html>
